@@ -11,3 +11,4 @@ cryptSuccess=Crypt success !
 dcryptFailled=Decrypt failled, unknow error
 dcryptFailledPassword=Decrypt failled ! False password !
 dcryptSuccess=Decrypt success !
+passwordDialogEnterPrivateKey=Enter your private key :
